# puffin

./: .dockerignore  .envrc  .gitignore  AGENTS.md  Dockerfile  README.md  devenv.nix  pyproject.toml
.github/workflows/: container.yml
migrations/: migrate_add_bottle_feed_unit.py  run_migrations.py
src/puffin/: backup.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  seed.py
src/puffin/routers/: activities.py  children.py  dashboard.py  diapers.py  feedings.py  health.py
static/css/: styles.css
static/fonts/: README.md
static/js/: app.js  common.js  settings.js
templates/: _child_confirm_modal.html  index.html  settings.html
tests/: conftest.py  test_activities.py  test_backup.py  test_children.py  test_diapers.py  test_export.py  test_feedings.py  test_health.py  test_migrations.py  test_pages.py  test_seed.py
tests/js/: README.md  child-scope.test.mjs  dashboard-state.test.mjs  fake-dom.mjs  harness.mjs  quick-add-visibility.test.mjs  timeago.test.mjs  timer-machine.test.mjs  timer-state.test.mjs
